3.6/anypoint-platform-for-apis/configuring-proxy-access-to-the-anypoint-platform-for-apis.adoc
= Configuring Proxy Access to the Anypoint Platform for APIs

You can configure an API Gateway instance that is paired with an Anypoint Platform for APIs organization to use a network proxy for channeling its communication with the platform. (See link:/documentation/display/current/Anypoint+Platform+for+APIs+System+Architecture[Anypoint Platform for APIs System Architecture] for details of how the API Gateway communicates with the Anypoint Platform.) Use the following procedure to configure an on-premises API Gateway instance to use a proxy.

== Studio [TAB]

. In Anypoint Studio, right-click your project name in the Package Explorer, select *Run As...* > *Run Configurations...*
. Select *Mule Application,* then open the *Arguments* tab.
. Copy and paste the following into the VM arguments box, leaving one space after any content that is already in the box: +
 +
`-Danypoint.platform.proxy_host=<IP address or host name of the proxy server> -Danypoint.platform.proxy_port=<port number of the proxy server (default value is 80)>` +

+
image:/documentation/download/attachments/122752429/RunConfig.png?version=1&modificationDate=1403620902918[image] +
+

. Optionally, add a username and password for your proxy by adding the following:  +
 +
 `-Danypoint.platform.proxy_username=<username to use for authentication> -Danypoint.platform.proxy_password=<password to use for authentication>`

. Click *Run*.

== Standalone [TAB]

. Open the  `wrapper.conf` file in your `<MULE_HOME>/conf` folder.
+
[TIP]
<MULE_HOME> is the value of the MULE_HOME variable employed by the API Gateway, usually the root directory of the Mule ESB installation, such as `/opt/Mule/api-gateway-1.0.0/`
. Paste the following code as a new item at the end of the list in your file, replacing the value of   **`n`**  with the next incremental values over the previous entries in the list. +
+
`wrapper.java.additional.<n>=-Danypoint.platform.proxy_host=<IP address or host name of the proxy server>`
+
`wrapper.java.additional.<n>=-Danypoint.platform.proxy_port=<port number of the proxy server (default value is 80)>`
. Optionally, add a username and password for your proxy by pasting the following code as new items at the end of the list in your file, again replacing the value of   **`n`**  with the next incremental values over the previous entries in the list. +
+
`wrapper.java.additional.<n>=-Danypoint.platform.proxy_username=<username to use for authentication>`
+
`wrapper.java.additional.<n>=-Danypoint.platform.proxy_password=<password to use for authentication>`

== See Also

* Learn more about the link:/documentation/display/current/Anypoint+Platform+for+APIs+System+Architecture[Anypoint Platform for APIs System Architecture]. 
